[package]
name = "xalloc"
version = "0.2.5"
authors = ["yvt <i@yvt.jp>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yvt/xalloc-rs"
description = """
Suballocators for external memory (e.g., Vulkan device memory)
"""
keywords = ["allocator", "vulkan", "memory", "suballocator", "tlsf"]

[features]
nightly = []

[dependencies]
num = "0.2.0"
unreachable = "1.0.0"
