[package]
name = "xalloc"
version = "0.2.7"
authors = ["yvt <i@yvt.jp>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yvt/xalloc-rs"
description = """
Suballocators for external memory (e.g., Vulkan device memory)
"""
keywords = ["allocator", "vulkan", "memory", "suballocator", "tlsf"]

[features]
default = ["std"]
nightly = []
std = ["num/std"]
hashbrown = [ "dep:hashbrown" ]

[dependencies]
num = { version = ">= 0.2.0, < 0.4.0", default_features=false}
unreachable = "1.0.0"
hashbrown = { version = "0.12", optional = true }